# hayabusa

./: .env.example  .gitignore  .gitmodules  1.csv  2.csv  4625.csv  4625check.csv  6625.csv  CHANGELOG-Japanese.md  CHANGELOG.md  Cargo.toml  DETunnel4624.csv  OLD-README-Japanese.md  OLD-README.md  README-1.4.3-Japanese.md  README-English.md  README-Japanese.md  README-Japanese_tmp.html  README.md  RULEFILE.md  SECURITY.md  b.csv  build.rs  contributors.txt  credits.txt  hayabusa-1.0.0-mac-arm-evtx-0.6.7  hayabusa-1.0.0-mac-intel-evtx-0.6.7  hayabusa_report.css  mkdocs.en.yml  mkdocs.ja.yml  mkdocs.yml  output.csv  realchannels.txt  realchannels2.txt  regexes.txt  suc.csv  system.csv  test.csv  whitelist.txt
.cargo/: config.toml  msvcrt.lib
.github/: .kodiak.toml  grcov.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: coverage.yml  docs.yml  grcov.yml  integration-test.yml  page_deploy.yml  release-drafter.yml  release.yml  rust.yml  supported_modifier.yml  sync-field-modifiers.yml  timeline-diff.yml
art/: christmas.txt  goku.txt  halloween.txt  happynewyear.txt  logo.txt  ninja.txt  takoyaki.txt
art/omikuji/: 5.txt  CHUKICHI.txt  DAIKICHI.txt  KICHI.txt  KYOU.txt  SHOUKICHI.txt
config/: channel_abbreviations.txt  default_profile.txt  default_profile.yaml  eventkey_alias.txt  exclude-rules-full.txt  exclude-rules.txt  level_color.txt  level_tuning.txt  mitre_tactics.txt  noisy-rules.txt  output_tag.txt  pivot_keywords.txt  profiles.txt  profiles.yaml  statistics_event_info.txt  target_eventids.txt  target_eventids_sample.txt  timeline_event_info.txt
config/html_report/: hayabusa_report.css
config/regex/: LOLBAS_commands.txt  LOLBAS_paths.txt  record_data_filter.txt
doc/: AboutRuleCreation-English.md  AboutRuleCreation-Japanese.md  AnalysisWithJQ-English.md  AnalysisWithJQ-Japanese.md  RULEFILE.md  RustPerformance-English.md  RustPerformance-Japanese.md  SupportedSigmaFieldModifiers.md
doc/ElasticStackImport/: ElasticStackImport-English.md  ElasticStackImport-Japanese.md  HayabusaDashboard.ndjson
doc/TimelineExplorerAnalysis/: TimelineExplorerAnalysis-English.md  TimelineExplorerAnalysis-Japanese.md
doc/TimesketchImport/: TimesketchImport-English.md  TimesketchImport-Japanese.md
logs/: DO_NOT_DELETE_THIS
mkdocs/: index.md
mkdocs/en/: index.md
mkdocs/ja/: index.md
rules/: README.md
rules-noisy/PowershellOperational/: 4104_T1059_PowershellExecutionRemoteCommand.yml
rules-noisy/Security/: 4688.yml
rules-noisy/Sigma/: sysmon_wmi_event_subscription.yml  win_metasploit_authentication.yml  win_powershell_script_installed_as_service.yml  win_rare_schtasks_creations.yml  win_rare_service_installs.yml  win_susp_failed_logons_single_source.yml  win_susp_failed_logons_single_source2.yml
rules/BitsClientOperational/: 59_T1197_BitsJobCreation.yaml
rules/PowershellOperational/: 400_T1562.010_PowershellV2DowngradeAttack.yml  4104_T1059_PowershellExecutionRemoteCommand.yml
rules/Security/: 1102_T1070.001_SecurityLogCleared.yml  4673.yml  4720.yml  4732.yml  4768_T1558.003_Kerberoasting.yml  _4672.yml
rules/Sigma/: av_exploiting.yml  av_password_dumper.yml  av_printernightmare_cve_2021_34527.yml  av_relevant_files.yml  dns_query_hybridconnectionmgr_servicebus.yml  dns_query_possible_dns_rebinding.yml  driver_load_powershell_script_installed_as_service.yml  driver_load_susp_temp_use.yml  file_event_mal_vhd_download.yml  file_event_tool_psexec.yml  file_event_wmiprvse_wbemcomn_dll_hijack.yml  pipe_created_tool_psexec.yml  powershell_automated_collection.yml  powershell_azurehound_commands.yml  powershell_cl_invocation_lolscript.yml  powershell_classic_powercat.yml  powershell_classic_remote_powershell_session.yml  powershell_classic_suspicious_download.yml  powershell_decompress_commands.yml  powershell_downgrade_attack.yml  powershell_exe_calling_ps.yml  powershell_invoke_obfuscation_clip_in_scriptblocktext.yml  powershell_invoke_obfuscation_stdin_in_scriptblocktext.yml  powershell_invoke_obfuscation_var_in_scriptblocktext.yml  powershell_invoke_obfuscation_via_use_mhsta_in_scriptblocktext.yml  powershell_invoke_obfuscation_via_use_rundll32_in_scriptblocktext.yml  powershell_invoke_obfuscation_via_var.yml  powershell_malicious_keywords.yml  powershell_nishang_malicious_commandlets.yml  powershell_shellintel_malicious_commandlets.yml  powershell_suspicious_download.yml  powershell_suspicious_download_in_contextinfo.yml  powershell_suspicious_invocation_generic.yml  powershell_suspicious_invocation_specific.yml  powershell_suspicious_win32_pnpentity.yml  powershell_suspicious_windowstyle.yml  powershell_timestomp.yml  powershell_trigger_profiles.yml  powershell_wmi_persistence.yml  powershell_wmimplant.yml  (+223 more)
rules/System/: 104_T1070.001_SystemLogCleared.yml  7030.yml  7036.yml  7040.yml  7045.yml
rules/bitsjobs/: 1197_bitsjob.yaml
rules/kerberoast/: as-rep-roasting.yml  kerberoasting.yml
rules/powershell/: downgrade_attack.yml
rules/sigma/: README.md
sample-evtx/DeepBlueCLI/: Powershell-Invoke-Obfuscation-encoding-menu.evtx  Powershell-Invoke-Obfuscation-many.evtx  Powershell-Invoke-Obfuscation-string-menu.evtx  disablestop-eventlog.evtx  eventlog-dac.evtx  many-events-application.evtx  metasploit-psexec-native-target-security.evtx  metasploit-psexec-native-target-system.evtx  metasploit-psexec-powershell-target-security.evtx  metasploit-psexec-powershell-target-system.evtx  metasploit-psexec-pwshpayload.evtx  (+8 more)
sample-results/: README.md  hayabusa-sample-evtx-ResultsDefaultSettings.csv  hayabusa-sample-evtx-ResultsDefaultSettings.xlsx  hayabusa-sample-evtx-ResultsDeprecatedAndNoisyRulesEnabled.xlsx
scripts/supported_modifiers_check/: README.md  pyproject.toml  readme.md  supported-modifier.py
src/: afterfact.rs  fillter.rs  filter.rs  level.rs  lib.rs  main.rs  omikuji.rs  results.rs  toml.rs  yaml.rs  yaml_expand.rs
tools/: README.md  tmp.yaml  yea.py
website/: README.md  mkdocs.yml  requirements.txt
(+4695 files in other folders)
