[package]
name = "hayabusa"
version = "3.1.0-dev"
repository = "https://github.com/Yamato-Security/hayabusa"
authors = ["Yamato Security @SecurityYamato"]
edition = "2021"
rust-version = "1.83.0"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
aho-corasick = "*"
base64 = "*"
bytesize = "1.*"
chrono = "0.4.*"
cidr-utils = "0.6.*"
clap = { version = "4.*", features = ["derive", "cargo", "color"]}
colored = "2"
comfy-table = "7.*"
compact_str = "0.8.*"
console = "0.15.*"
csv = "1.3.*"
dashmap = "*"
dialoguer = "*"
downcast-rs = "1.*"
evtx = { git = "https://github.com/Yamato-Security/hayabusa-evtx.git" , features = ["fast-alloc"] , rev = "cd33263" } # 0.8.13 2024/12/23 update
git2 = "0.*"
hashbrown = "0.15.*"
hex = "0.4.*"
horrorshow = "0.8.*"
indexmap = "2.*"
indicatif = "*"
infer = "*"
itertools = "*"
krapslog = "0.6"
lazy_static = "1.5.*"
libmimalloc-sys = { version = "*",  features = ["extended"] }
maxminddb = "0.*"
memchr = "2.*"
mimalloc = { version = "*", default-features = false }
nested="*"
num = "0.4.0"
num-format = "*"
pulldown-cmark = { version = "0.9.*", default-features = false, features = ["simd"] }
rand = "0.8.*"
regex = "1"
serde = { version = "1.*", features = ["derive"] }
serde_derive = "1.*"
serde_json = { version = "1.0"}
termcolor = "*"
terminal_size = "*"
tokio = { version = "1", features = ["full"] }
ureq = "*"
wildmatch = "2.*"
yaml-rust2 = "0.9"
rust-embed={version = "8.5.0", features = ["include-exclude", "debug-embed"]}
encoding_rs = "0.8.35"
walkdir = "2.5.0"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.dev]
debug-assertions = false

[dev-dependencies]
rand = "0.8.*"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.*"

[target.'cfg(unix)'.dependencies] #Mac and Linux
openssl = { version = "*", features = ["vendored"] }  #vendored is needed to compile statically.

[profile.release]
lto = true
strip = "symbols"