[package]
name = "hayabusa"
version = "3.6.0-dev"
repository = "https://github.com/Yamato-Security/hayabusa"
authors = ["Yamato Security @SecurityYamato"]
edition = "2024"
rust-version = "1.89.0"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
aho-corasick = "*"
base64 = "*"
bytesize = "2.*"
chrono = "0.4.*"
cidr-utils = "0.6.*"
clap = { version = "4.*", features = ["derive", "cargo", "color"]}
colored = "2"
comfy-table = "7.*"
compact_str = "0.9.*"
console = "0.16.*"
csv = "1.3.*"
dashmap = "*"
dialoguer = "*"
downcast-rs = "1.*"
evtx = { git = "https://github.com/Yamato-Security/hayabusa-evtx.git" , features = ["fast-alloc"] , rev = "99a3625" } # 0.9.3 2025/8/16 update
git2 = "0.*"
hashbrown = "0.16.*"
hex = "0.4.*"
horrorshow = "0.8.*"
indexmap = "2.*"
indicatif = "*"
infer = "*"
itertools = "*"
krapslog = "0.6"
lazy_static = "1.5.*"
libmimalloc-sys = { version = "*",  features = ["extended"] }
maxminddb = "0.*"
memchr = "2.*"
mimalloc = { version = "*", default-features = false }
nested="*"
num = "0.4.0"
num-format = "*"
pulldown-cmark = { version = "0.9.*", default-features = false, features = ["simd"] }
rand = "0.9.*"
regex = "1"
serde = { version = "1.*", features = ["derive"] }
serde_derive = "1.*"
serde_json = { version = "1.0"}
strum = { version = "0.27.*", features = ["derive"] }
termcolor = "*"
terminal_size = "*"
tokio = { version = "1", features = ["full"] }
ureq = "*"
wildmatch = "2.*"
yaml-rust2 = "0.10"
rust-embed={version = "8.7.2", features = ["include-exclude", "debug-embed"]}
encoding_rs = "0.8.35"
walkdir = "2.5.0"
uuid = { version = "1.11.0", features = ["v4"] }
winapi = { version = "0.3.9", features = ["wow64apiset"] }

[profile.dev]
debug-assertions = false

[dev-dependencies]
rand = "0.9.*"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.*"

[target.'cfg(unix)'.dependencies] #Mac and Linux
openssl = { version = "*", features = ["vendored"] }  #vendored is needed to compile statically.

[profile.release]
lto = true
strip = "symbols"
