[tool.poetry]
name = "supported-modifier"
version = "0.1.0"
description = ""
authors = ["Yamato Security"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ruamel-yaml = "^0.18.6"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
